--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,16 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.3
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_tts: ^3.5.0
+  speech_to_text: ^4.0.4
+  path_provider: ^2.0.11
+  http: ^1.2.2
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
